Game detail page update

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -19,6 +19,7 @@
         <meta name="twitter:description" content="Get ready for GUSTO 2024, the annual sports fest at GITAM Hyderabad! Join us for an adrenaline-pumping extravaganza featuring a myriad of sports, exciting competitions, and a celebration of sportsmanship and camaraderie." />
         <meta name="twitter:image" content="URL to your event image" />
         <meta name="twitter:creator" content="@YourTwitterHandle" />
+        <meta property="og:title" content=GUSTO 2024 - GITAM Hyderabad Annual Sports Fest>
 
         <meta name="description" content="Get ready for GUSTO 2024, the annual sports fest at GITAM Hyderabad! Join us for an adrenaline-pumping extravaganza featuring a myriad of sports, exciting competitions, and a celebration of sportsmanship and camaraderie." />
         <meta name="author" content="GITAM Hyderabad" />
